--- a/alpha tec.html
+++ b/alpha tec.html
@@ -6,7 +6,7 @@
 	
 <title>ALPHA TEC</title>
 	
-<link rel="stylesheet" type="text/css" href="tela inicial.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="alphatec.css" media="screen" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	
@@ -41,13 +41,55 @@
   <img src="https://i.ibb.co/VgSspjY/whatsapp-button.png" alt="botão whatsapp">
 </a>
 	
+	<div class="carrosel">
+	<ul>
+		<li>
+		<img src="C:\Users\Levy\Desktop\SITE AST\logo\suporte.jpg" alt="">
+		</li>
+		
+		<li>
+		<img src="C:\Users\Levy\Desktop\SITE AST\logo\rede.jpg" alt="">
+		</li>
+		
+		<li>
+		<img src="C:\Users\Levy\Desktop\SITE AST\logo\servidor.jpg" alt="">
+		</li>
+		
+		<li>
+		<img src="C:\Users\Levy\Desktop\SITE AST\logo\aramis.jpg" alt="">
+		</li>
+		
+		 <li>
+		<img src="C:\Users\Levy\Desktop\SITE AST\logo\internet.jpg" alt="">
+		</li>
+		</ul>
+	</div>
+	
+	<nav id="meio">
+	<h2>O QUE E A ALPHA TECH</h2>
+		
+	</nav>
+	<br>
+	
+	<div id= "imagem">
+	 <img src="C:\Users\Levy\Desktop\SITE AST\logo\alphatec.png" width="350px" height="150px"> 
+		
 
+	
+	
+	<p> djsdhsddddddddddddd
+hhhhhhhhhhhhhhhhg<br>
+		fdfbggggggggggggggggg
+		dddfdddddddddddddddddddd</p>
+		
+	</div>
+	<br>
 </body>
 	
 <footer>
 	
-  <img src="C:\Users\Levy\Desktop\SITE AST\logo\ast.png" width=150px height=130px >
-	
+  <img src="C:\Users\Levy\Desktop\SITE AST\logo\ast.png" width=150px height=130px />
+
 	
 	<select data-uia="language-picker" class="ui-select medium" id="lang-switcher-select" tabindex="0" placeholder="lang-switcher"><option selected="Português" lang="pt" value="/br/" data-language="pt" data-country="BR">Português</option><option lang="en" value="/br-en/" data-language="en" data-country="EN">English</option></select>
 	
