--- a/alpha tec.html
+++ b/alpha tec.html
@@ -23,7 +23,7 @@
 		
 	<nav> 
 		
-		<li> <a href="#">Home<div class="link"></div></a></li>
+		<li> <a href="file:///C:/Users/Levy/Desktop/SITE%20AST/Site/tela%20inicial.html">Home<div class="link"></div></a></li>
 		<li> <a href="file:///C:/Users/Levy/Desktop/SITE%20AST/Site/alphatec.html">AlphaTec<div class="link"></div></a> </li>
 		<li> <a href="#">Automattize<div class="link"></div></a>  </li>
 		<li> <a href="#">TechCenter<div class="link"></div></a> </li>
@@ -77,10 +77,16 @@
 
 	
 	
-	<p> djsdhsddddddddddddd
-hhhhhhhhhhhhhhhhg<br>
-		fdfbggggggggggggggggg
-		dddfdddddddddddddddddddd</p>
+	<p> a Alpha Tec e uma empresa que faz parte do Grupo AST, a qual e encarregada de diversas funcoes. <br>
+		<br>
+		Dentre as quais pode-se destacar:<br>
+		<br>
+		Suporte de T.I<br>
+		Internet<br>
+		VoIP<br>
+		Infraestrutura de rede<br>
+		Servidores<br>
+		</p>
 		
 	</div>
 	<br>
