--- a/alpha tec.html
+++ b/alpha tec.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="shortcut icon" href="C:\Users\Levy\Desktop\SITE AST\logo\alphatec.png">
+<link rel="shortcut icon" href="C:\Users\Levy\Desktop\SITE AST\imagens\alphatec.png">
 <meta charset="utf-8">
 	
 <title>ALPHA TEC</title>
@@ -44,61 +44,61 @@
 	<div class="carrosel">
 	<ul>
 		<li>
-		<img src="C:\Users\Levy\Desktop\SITE AST\logo\suporte.jpg" alt="">
+		<img src="C:\Users\Levy\Desktop\SITE AST\imagens\suporte.jpg" alt="">
 		</li>
 		
 		<li>
-		<img src="C:\Users\Levy\Desktop\SITE AST\logo\rede.jpg" alt="">
+		<img src="C:\Users\Levy\Desktop\SITE AST\imagens\rede.jpg" alt="">
 		</li>
 		
 		<li>
-		<img src="C:\Users\Levy\Desktop\SITE AST\logo\servidor.jpg" alt="">
+		<img src="C:\Users\Levy\Desktop\SITE AST\imagens\servidor.jpg" alt="">
 		</li>
 		
 		<li>
-		<img src="C:\Users\Levy\Desktop\SITE AST\logo\aramis.jpg" alt="">
+		<img src="C:\Users\Levy\Desktop\SITE AST\imagens\aramis.jpg" alt="">
 		</li>
 		
 		 <li>
-		<img src="C:\Users\Levy\Desktop\SITE AST\logo\internet.jpg" alt="">
+		<img src="C:\Users\Levy\Desktop\SITE AST\imagens\internet.jpg" alt="">
 		</li>
 		</ul>
 	</div>
 	
-	<nav id="meio">
-	<h2>O QUE E A ALPHA TECH</h2>
-		
-	</nav>
 	<br>
 	
 	<div id= "imagem">
-	 <img src="C:\Users\Levy\Desktop\SITE AST\logo\alphatec.png" width="350px" height="150px"> 
+	 <img src="C:\Users\Levy\Desktop\SITE AST\imagens\alphatec.png" width="350px" height="150px"> 
 		
-
-	
-	
-	<p> a Alpha Tec e uma empresa que faz parte do Grupo AST, a qual e encarregada de diversas funcoes. <br>
-		<br>
-		Dentre as quais pode-se destacar:<br>
-		<br>
-		Suporte de T.I<br>
-		Internet<br>
-		VoIP<br>
-		Infraestrutura de rede<br>
-		Servidores<br>
-		</p>
-		
+<br>
 	</div>
 	<br>
+<div class="container">
+	<div class="box">
+		<h2>hmtl</h2>
+		<img src="../imagens/aramis.jpeg" width="250px" height="250px">
+	</div>
+	<div class="box">
+		<h2>css</h2>
+		<h2>css</h2>
+		<img src="../imagens/rede.jpg" width="250px" height="250px">
+	</div>
+	
+	<div class="box">
+		<h2>hmtl</h2>
+		<h2>css</h2>
+		<i class="fa fa-html5"></i>
+		<img src="../imagens/servidor.jpg" width="250px" height="250px">
+	</div>
+	</div>
 </body>
 	
 <footer>
-	
-  <img src="C:\Users\Levy\Desktop\SITE AST\logo\ast.png" width=150px height=130px />
+
+  <img src="C:\Users\Levy\Desktop\SITE AST\imagens\ast.png" width=150px height=130px />
 
 	
 	<select data-uia="language-picker" class="ui-select medium" id="lang-switcher-select" tabindex="0" placeholder="lang-switcher"><option selected="Português" lang="pt" value="/br/" data-language="pt" data-country="BR">Português</option><option lang="en" value="/br-en/" data-language="en" data-country="EN">English</option></select>
-	
 	
 	<li 
 	
@@ -139,9 +139,9 @@
                 <center>
                 <ul>
 					
-                 <a><img href="#!" src="C:\Users\Levy\Desktop\SITE AST\Site\logo\facebook.png" width="50px" height=50px></a>
+                 <a><img href="#!" src="C:\Users\Levy\Desktop\SITE AST\imagens\facebook.png" width="50px" height=50px></a>
 					
-                 <a><img href="#!" src="C:\Users\Levy\Desktop\SITE AST\Site\logo\linkedin.png" width="50px" height=50px></a>
+                 <a><img href="#!" src="C:\Users\Levy\Desktop\SITE AST\imagens\linkedin.png" width="50px" height=50px></a>
 		
                  <br>
                 </ul>
