--- a/automatize.html
+++ b/automatize.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="shortcut icon" href="C:\Users\Levy\Desktop\SITE AST\site\logo\auto.png">
+<link rel="shortcut icon" href="C:\Users\Levy\Desktop\SITE AST\imagens\auto.png" width="90px" height="50px">
 <meta charset="utf-8">
 	
 <title>AUTOMATIZE</title>
 	
-<link rel="stylesheet" type="text/css" href="tela inicial.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="automatize.css" media="screen" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	
@@ -17,45 +17,103 @@
 	<input type="checkbox" id="check">
 	<label id="icone" for="check">
 		
-	<h1>MENU</h1></label>
+	<h1>☰</h1></label>
 	
 	<div class="barra">
 		
 	<nav> 
 		
-		<li> <a href="#">Home<div class="link"></div></a></li>
-		<li> <a href="file:///C:/Users/Levy/Desktop/SITE%20AST/Site/alphatec.html">AlphaTec<div class="link"></div></a> </li>
-		<li> <a href="#">Automattize<div class="link"></div></a>  </li>
+		<li> <a href="file:///C:/Users/Levy/Desktop/SITE%20AST/Tela%20inicial/tela%20inicial.html">Home<div class="link"></div></a></li>
+		<li> <a href="file:///C:/Users/Levy/Desktop/SITE%20AST/alphatec/alphatec.html">AlphaTec<div class="link"></div></a> </li>
+		<li> <a href="file:///C:/Users/Levy/Desktop/SITE%20AST/automatize/automatize.html">Automattize<div class="link"></div></a>  </li>
 		<li> <a href="#">TechCenter<div class="link"></div></a> </li>
-		<li> <a href="#">FTWSolucoes<div class="link"></div></a> </li>
+		<li> <a href="file:///C:/Users/Levy/Desktop/SITE%20AST/FTW/FTW.html">FTWSolucoes<div class="link"></div></a> </li>
 
 	</nav>
 
 	</div>
-	
-	<div class="zoom">
 		
-	<img src="C:\Users\Levy\Desktop\SITE AST\logo\automatize.png" width=495px height=260px class="img-responsive"> <br>
 
-		
-</div>
 	
 	<a href="https://api.whatsapp.com/send?phone=8197614259" class="whatsapp-button" target="_blank" style="position: fixed;  right: 15px; bottom: 15px; ">
 		
 		
   <img src="https://i.ibb.co/VgSspjY/whatsapp-button.png" alt="botão whatsapp">
 </a>
-
 	
+	<div class="content">
+			
+		<div class="slides">
+		<input type="text"> 
+		<input type="radio" name= "slide" id="slide1" checked>
+		<input type="radio" name= "slide" id="slide2">
+		<input type="radio" name= "slide" id="slide3">
+		<input type="radio" name= "slide" id="slide4">
+		<input type="radio" name= "slide" id="slide5">
+		
+		<div class="slide s1">
+		<img src="../imagens/aramis.jpeg" alt="">
+		</div>
+	
+		<div class="slide">
+		<img src="../imagens/servidor.jpg" alt="">
+		</div>
+		
+		<div class="slide">
+		<img src="../imagens/rede.jpg" alt="">
+		</div>
+		
+		<div class="slide">
+		<img src="../imagens/internet.jpg" alt="">
+		</div>
+		
+		<div class="slide">
+		<img src="../imagens/projeto.jpeg" alt="">
+		</div>
+		
+	</div>
+	</div>
+	
+	<div class="navigation">
+	<label class="bar" for= "slide1"></label>
+	<label class="bar" for= "slide2"></label>
+	<label class="bar" for= "slide3"></label>
+	<label class="bar" for= "slide4"></label>
+	<label class="bar" for= "slide5"></label>
+	</div>
+	
+	<div id= "imagem">
+	 <img src="C:\Users\Levy\Desktop\SITE AST\imagens\automatize.png" width="350px" height="150px"> 
+		
+<br>
+	</div>
+	<br>
+<div class="container">
+	<div class="box">
+		<h2>hmtl</h2>
+		<i class="fa fa-html5"></i>
+		<img src="../imagens/aramis.jpeg" width="250px" height="250px">
+	</div>
+	<div class="box">
+		<h2>css</h2>
+		<i class="fe fe-css"></i>
+		<img src="../imagens/rede.jpg" width="250px" height="250px">
+	</div>
+	
+	<div class="box">
+		<h2>teste</h2>
+		<i class="fi fi-teste" ></i>
+		<img src="../imagens/servidor.jpg" width="250px" height="250px">
+	</div>
+	</div>
 </body>
 	
 <footer>
-	
-  <img src="C:\Users\Levy\Desktop\SITE AST\logo\ast.png" width=150px height=130px >
-	
+
+  <img src="C:\Users\Levy\Desktop\SITE AST\imagens\ast.png" width=150px height=130px />
+
 	
 	<select data-uia="language-picker" class="ui-select medium" id="lang-switcher-select" tabindex="0" placeholder="lang-switcher"><option selected="Português" lang="pt" value="/br/" data-language="pt" data-country="BR">Português</option><option lang="en" value="/br-en/" data-language="en" data-country="EN">English</option></select>
-	
 	
 	<li 
 	
@@ -76,7 +134,7 @@
 <br>
 <h2 class="email-form-title">Deseja conhecer melhor nossos serviços? Deixe seu contato conosco que entraremos em contato!</h2>
 <br>
-
+	
 
 <fieldset>
 	
@@ -96,9 +154,9 @@
                 <center>
                 <ul>
 					
-                 <a><img href="#!" src="C:\Users\Levy\Desktop\SITE AST\Site\logo\facebook.png" width="50px" height=50px></a>
+                 <a><img href="#!" src="C:\Users\Levy\Desktop\SITE AST\imagens\facebook.png" width="50px" height=50px></a>
 					
-                 <a><img href="#!" src="C:\Users\Levy\Desktop\SITE AST\Site\logo\linkedin.png" width="50px" height=50px></a>
+                 <a><img href="#!" src="C:\Users\Levy\Desktop\SITE AST\imagens\linkedin.png" width="50px" height=50px></a>
 		
                  <br>
                 </ul>
