--- a/Tela inicial.html
+++ b/Tela inicial.html
@@ -13,7 +13,6 @@
 </head>
 
 <body>
-	
 	<input type="checkbox" id="check">
 	<label id="icone" for="check">
 		
@@ -32,28 +31,37 @@
 	</nav>
 
 	</div>
-	
+
 	<div class="zoom">
 		
 	<img src="C:\Users\Levy\Desktop\SITE AST\imagens\grupo ast.png" width=400px height=280px class="img-responsive"> <br>
 
 		
 </div>
+			<div class="zoom2">
+		<img src="C:\Users\Levy\Desktop\SITE AST\imagens\auto.png" width=105px height=95px class="img-responsive">
+	</div> 
+			<div class="texto">
+			<h2>AUTOMATIZE</h2>
+		
+			</div>
 	<br>
-	<div class="zoom2">
-	<img src="C:\Users\Levy\Desktop\SITE AST\imagens\auto.png" width=105px height=95px class="img-responsive">
-	<legend>ALPHA TEC</legend>	</div> 
+			<div class="zoom3">
+			<img src="C:\Users\Levy\Desktop\SITE AST\imagens\auto.png" width=105px height=95px class="zoom3">
+			
+	</div>
 	<br>
-	<div class="zoom3">
-	<img src="C:\Users\Levy\Desktop\SITE AST\imagens\auto.png" width=105px height=95px class="zoom3">
-	<li>AUTOMATTIZE</li></div> 
-	<br>
-	<div class="zoom4">
-	<img src="C:\Users\Levy\Desktop\SITE AST\imagens\auto.png" width=105px height=95px class="zoom3">
-	 <li>FTW SOLUCOES</li></div> 
+	
+			<div class="zoom4">
+				<img src="C:\Users\Levy\Desktop\SITE AST\imagens\auto.png" width=105px height=95px class="zoom3">
+	 </div> 
+	 
+	 		
+</div>
+	</div>
 	
 	<br>
-	
+
 	<a href="https://api.whatsapp.com/send?phone=8197614259" class="whatsapp-button" target="_blank" style="position: fixed;  right: 15px; bottom: 15px; ">
 		
 		
@@ -62,12 +70,19 @@
 
 	
 	<nav class = "meio">
+
+		<h1>TESTE</h1>
+		<P>jjjjjjjjjjjjjjjjjjjjjjjjjjj <BR>
+			jjjjjjjjjjjjjjjjjjjjjjjjjjj<BR>
+			jjjjjjjjjjjjjjjjjjjjjjjjjjj<BR>
+			jjjjjjjjjjjjjjjjjjjjjjjjjjj</P>
 	<img src="C:\Users\Levy\Desktop\SITE AST\imagens\projeto.jpeg" width=280px height=230px id="imglateral" >
-		<li>jjjjjjjjjjjjjjjjjjjjjjjjjjj</li>
-		<li>jjjjjjjjjjjjjjjjjjjjjjjjjjj</li>
-		<li>jjjjjjjjjjjjjjjjjjjjjjjjjjj</li>
-		<li>jjjjjjjjjjjjjjjjjjjjjjjjjjj</li>
-		
+	
+		<h1>TESTANDO</h1>
+		<P>jjjjjjjjjjjjjjjjjjjjjjjjjjj <BR>
+			jjjjjjjjjjjjjjjjjjjjjjjjjjj<BR>
+			jjjjjjjjjjjjjjjjjjjjjjjjjjj<BR>
+			jjjjjjjjjjjjjjjjjjjjjjjjjjj</P>
 		<img src="C:\Users\Levy\Desktop\SITE AST\imagens\projeto.jpeg" width=280px height=230px id="imagemlateral">
 		</nav>
 </body>
@@ -80,21 +95,7 @@
 	<select data-uia="language-picker" class="ui-select medium" id="lang-switcher-select" tabindex="0" placeholder="lang-switcher"><option selected="Português" lang="pt" value="/br/" data-language="pt" data-country="BR">Português</option><option lang="en" value="/br-en/" data-language="en" data-country="EN">English</option></select>
 	
 	
-	<li 
-	
-	placeholder="footer_responsive_link_account_item"><a class="footer-link" data-uia="footer-link" href="#" placeholder="footer_responsive_link_account"><span id="" data-uia="data-uia-footer-label">Cadastre-se</span></a></li><li class="footer-link-item" 
-	
-	placeholder="footer_responsive_link_gift_redeem_item"><a class="footer-link" data-uia="footer-link" href="#" placeholder="footer_responsive_link_gift_redeem"><span id="" data-uia="data-uia-footer-label">Atendimento imediato</span></a></li><li class="footer-link-item" 
-	
-	placeholder="footer_responsive_link_gift_buy_item"><a class="footer-link" data-uia="footer-link" href="#" placeholder="footer_responsive_link_gift_buy"><span id="" data-uia="data-uia-footer-label">Nossa localizacao</span></a></li><li class="footer-link-item" 
-	
-	placeholder="footer_responsive_link_terms_item"><a class="footer-link" data-uia="footer-link" href="#" placeholder="footer_responsive_link_terms"><span id="" data-uia="data-uia-footer-label">Termos de uso</span></a></li><li class="footer-link-item" 
-	
-	placeholder="footer_responsive_link_privacy_separate_link_item"><a class="footer-link" data-uia="footer-link" href="#" placeholder="footer_responsive_link_privacy_separate_link"><span id="palavras" data-uia="data-uia-footer-label">Seguranca</span></a></li><li class="footer-link-item" 
-	
-	placeholder="footer_responsive_link_corporate_information"><a class="footer-link" data-uia="footer-link" href="#" placeholder="footer_responsive_link_privacy_separate_link"><span id="" data-uia="data-uia-footer-label">Informações corporativas</span></a></li><li class="footer-link-item" placeholder="footer_responsive_link_contact_us_item"><a class="footer-link" data-uia="footer-link" 
-	
-<br>
+
 
 <br>
 <h2 class="email-form-title">Deseja conhecer melhor nossos serviços? Deixe seu contato conosco que entraremos em contato!</h2>
