--- a/alpha tec.html
+++ b/alpha tec.html
@@ -17,7 +17,7 @@
 	<input type="checkbox" id="check">
 	<label id="icone" for="check">
 		
-	<h1>☰ </h1> </label>
+	<h1>☰ </h1></label>
 	
 	<div class="barra">
 		
@@ -79,9 +79,7 @@
 		
   <img src="https://i.ibb.co/VgSspjY/whatsapp-button.png" alt="botão whatsapp">
 </a>
-<div class="logo">
-	<img src="../imagens/ast.png" width="100px" height="80px">
-</div>
+
 	
 	<div id= "imagem">
 	 <img src="C:\Users\Levy\Desktop\SITE AST\imagens\alphatec.png" width="350px" height="150px"> 
@@ -89,6 +87,12 @@
 <br>
 	</div>
 	<br>
+	<div class="logo">
+		<img src="C:\Users\Levy\Desktop\SITE AST\imagens\grupo ast.png" width="100px" height="80px">
+	</div>
+	<br><br>
+	<nav>
+		<br><br><br>
 <div class="container">
 
 	<div class="box">
@@ -107,9 +111,11 @@
 		<h2>Tecnologia</h2>
 		<i class="fi fi-teste" ></i>
 		<img src="../imagens/servidor.jpg" width="250px" height="250px">
+		
 	</div>
 	</div>
 </section>
+</nav>
 </body>
 	
 <footer>
