--- a/Tela inicial.html
+++ b/Tela inicial.html
@@ -38,11 +38,11 @@
 
 		
 </div>
+<div class="imagens">
 			<div class="zoom2">
 		<img src="C:\Users\Levy\Desktop\SITE AST\imagens\auto.png" width=105px height=95px class="img-responsive">
 	</div> 
-			<div class="texto">
-			<h2>AUTOMATIZE</h2>
+			<br>
 		
 			</div>
 	<br>
@@ -55,7 +55,7 @@
 			<div class="zoom4">
 				<img src="C:\Users\Levy\Desktop\SITE AST\imagens\auto.png" width=105px height=95px class="zoom3">
 	 </div> 
-	 
+	</div>
 	 		
 </div>
 	</div>
@@ -73,9 +73,7 @@
 	<!--primeiro card --> 
 
 		<div class="card">
-			<div class="img">
-			<img src="../imagens/automatize.png"  width="150px" height="120">
-			</div>
+			
 			<h1>Automattize</h1>
 			<div class="content">
 				<p>
@@ -90,9 +88,7 @@
 		<!--segundo card-->
 
 		<div class="card">
-			<div class="img">
-			<img src="../imagens/alphatec.png"  width="150px" height="120">
-			</div>
+		
 			<h1 >AlfaTec</h1>
 			<div class="content">
 				<p>
@@ -109,9 +105,7 @@
 	<!--Terceiro card-->
 
 	<div class="card">
-		<div class="img">
-		<img src="../imagens/grupo ast.png" width="150px" height="120">
-		</div>
+	
 		<h1>FTW Solucoes</h1>
 		<div class="content">
 			<p>
@@ -125,28 +119,12 @@
  </div>
 </div>
 
-	<nav class = "meio">
-
-		<h1>TESTE</h1>
-		<P>jjjjjjjjjjjjjjjjjjjjjjjjjjj <BR>
-			jjjjjjjjjjjjjjjjjjjjjjjjjjj<BR>
-			jjjjjjjjjjjjjjjjjjjjjjjjjjj<BR>
-			jjjjjjjjjjjjjjjjjjjjjjjjjjj</P>
-	<img src="C:\Users\Levy\Desktop\SITE AST\imagens\projeto.jpeg" width=280px height=230px id="imglateral" >
-	
-		<h1>TESTANDO</h1>
-		<P>jjjjjjjjjjjjjjjjjjjjjjjjjjj <BR>
-			jjjjjjjjjjjjjjjjjjjjjjjjjjj<BR>
-			jjjjjjjjjjjjjjjjjjjjjjjjjjj<BR>
-			jjjjjjjjjjjjjjjjjjjjjjjjjjj</P>
-		<img src="C:\Users\Levy\Desktop\SITE AST\imagens\projeto.jpeg" width=280px height=230px id="imagemlateral">
-		</nav>
 </body>
 	
 <footer>
-	
+	<div class="img footer">
   <img src="C:\Users\Levy\Desktop\SITE AST\imagens\ast.png" width=150px height=130px >
-	
+</div>
 	
 	<select data-uia="language-picker" class="ui-select medium" id="lang-switcher-select" tabindex="0" placeholder="lang-switcher"><option selected="Português" lang="pt" value="/br/" data-language="pt" data-country="BR">Português</option><option lang="en" value="/br-en/" data-language="en" data-country="EN">English</option></select>
 	
